@@ -2,6 +2,7 @@ ikiwiki (2.72) UNRELEASED; urgency=low
 
   * Avoid comments in recentchanges being broken links (smcv)
   * Add deprecation warning for GlobLists, which will stop working in 3.0.
+  * camelcase: Add camelcase_ignore setting.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 22 Dec 2008 19:02:16 -0500
 
